--- a/_pages/author-terri-sluss-cole.html
+++ b/_pages/author-terri-sluss-cole.html
@@ -8,8 +8,14 @@ permalink: "/author-terri-sluss-cole.html"
     <div class="col-md-8">        
         <div class="row align-items-center mb-5">
             <div class="col-md-9">
-                <h2 class="font-weight-bold">{{page.title}} <span class="small btn btn-outline-success btn-sm btn-round"><a href="{{ site.authors.terri.twitter }}">Follow</a></span></h2>
-                <p><a href="{{ site.authors.terri.site }}">{{ site.authors.terri.site }}</a></p>
+                <h2 class="font-weight-bold">{{page.title}}</h2>
+                <p>
+                <a href="{{ site.authors.terri.twitter }}"><i class="fab fa-twitter"></i></a>&nbsp;
+                <a href="{{ site.authors.terri.facebook }}"><i class="fab fa-facebook"></i></a>&nbsp;
+                <a href="{{ site.authors.terri.instagram }}"><i class="fab fa-instagram"></i></a>&nbsp;
+                <a href="{{ site.authors.terri.linkedin }}"><i class="fab fa-linkedin"></i></a>&nbsp;
+                <a href="mailto:{{ site.authors.terri.email }}"><i class="fas fa-envelope"></i></a>&nbsp;
+                </p>
                 <p class="excerpt">{{ site.authors.terri.bio }}</p>
             </div>
             <div class="col-md-3 text-right">
