--- a/_pages/authors-list.html
+++ b/_pages/authors-list.html
@@ -21,7 +21,10 @@ permalink: "/authors-list.html"
             <div class="icon-block mt-3 d-flex justify-content-between">  
             <div>
             <a target="_blank" href="{{ author[1].twitter }}"><i class="fab fa-twitter text-muted" aria-hidden="true"></i></a>  &nbsp;
-            <a target="_blank" href="{{ author[1].site }}"><i class="fa fa-globe text-muted" aria-hidden="true"></i></a> &nbsp;
+            <a target="_blank" href="{{ author[1].facebook }}"><i class="fab fa-facebook text-muted" aria-hidden="true"></i></a> &nbsp;
+            <a target="_blank" href="{{ author[1].instagram }}"><i class="fab fa-instagram text-muted" aria-hidden="true"></i></a>  &nbsp;
+            <a target="_blank" href="{{ author[1].linkedin }}"><i class="fab fa-linkedin text-muted" aria-hidden="true"></i></a> &nbsp;
+            <a href="mailto:{{ author[1].email }}"><i class="fas fa-envelope text-muted" aria-hidden="true"></i></a>  &nbsp;
             </div>
             </div>
             </div>
